--- a/app/src/main/res/layout/topic_list.xml
+++ b/app/src/main/res/layout/topic_list.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#80FFFFFF"
-    android:backgroundTintMode="src_over"
     tools:context="gr.metaptixiako.forumergasia.TopicActivity">
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/wellcome_topic"
@@ -24,7 +26,7 @@
         tools:textAlignment="center" />
 
     <ListView
-        android:id="@+id/list_post"
+        android:id="@+id/list_topic"
         android:layout_width="wrap_content"
         android:layout_height="248dp"
         android:layout_marginTop="8dp"
@@ -44,7 +46,7 @@
         android:layout_marginTop="8dp"
         android:background="#2D89CC"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@+id/button_topic_new"
+        app:layout_constraintTop_toBottomOf="@+id/button_posts_new"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,7 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Google maps"
-            app:layout_constraintTop_toBottomOf="@+id/button_topic_new"/>
+            app:layout_constraintTop_toBottomOf="@+id/button_posts_new"/>
 
 
     </LinearLayout>
@@ -109,7 +111,7 @@
         android:text="New Topic"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/list_post"
+        app:layout_constraintTop_toBottomOf="@+id/list_topic"
         tools:background="@drawable/common_google_signin_btn_text_light_normal_background" />
 
     <Button
@@ -125,3 +127,5 @@
         app:layout_constraintTop_toBottomOf="@+id/topic_new" />
 
 </android.support.constraint.ConstraintLayout>
+
+    </ScrollView>
