--- a/app/src/main/res/layout/topic_list.xml
+++ b/app/src/main/res/layout/topic_list.xml
@@ -108,7 +108,9 @@
         android:layout_height="88dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="New Topic"
+        android:focusable="true"
+        android:hint="New topic"
+        android:gravity="top|left"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/list_topic"
