--- a/app/src/main/res/layout/post_list.xml
+++ b/app/src/main/res/layout/post_list.xml
@@ -101,8 +101,8 @@
         android:layout_width="317dp"
         android:layout_height="88dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="New Post"
+        android:inputType="text|textMultiLine|textCapSentences"
+        android:hint="New Post"
         android:focusable="true"
         android:gravity="top|left"
         app:layout_constraintLeft_toLeftOf="parent"
