--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -91,11 +91,10 @@
         android:id="@+id/repass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="172dp"
         android:ems="10"
-        android:hint="Re-pass"
+        android:hint="ΞΑΝΑ-Συνθηματικό"
         android:inputType="textPassword"
-        android:textColorHint="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
