--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -17,7 +17,7 @@
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/repass"
+        app:layout_constraintTop_toBottomOf="@+id/repassw"
         tools:ignore="MissingConstraints" />
 
     <EditText
@@ -44,7 +44,7 @@
         android:ems="10"
         android:hint="Επίθετο"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/editText5"
+        app:layout_constraintBottom_toTopOf="@+id/username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -54,7 +54,7 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="26dp"
@@ -68,17 +68,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pass"
-        app:layout_constraintVertical_bias="0.529"
+        app:layout_constraintVertical_bias="0.555"
         tools:ignore="MissingConstraints" />
 
     <EditText
         android:id="@+id/pass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
+        android:layout_marginBottom="136dp"
         android:ems="10"
         android:hint="Συνθηματικό"
         android:inputType="textPassword"
+        android:textColorHint="#ffff299f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -88,13 +89,14 @@
         tools:ignore="MissingConstraints" />
 
     <EditText
-        android:id="@+id/repass"
+        android:id="@+id/repassw"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="172dp"
+        android:layout_marginTop="8dp"
         android:ems="10"
-        android:hint="ΞΑΝΑ-Συνθηματικό"
         android:inputType="textPassword"
+        android:hint="Συνθηματικό"
+        android:textColorHint="#ffff299f"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
