--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
     android:layout_height="33dp"
     android:layout_marginTop="32dp"
     android:text="Βάλτε τα στοιχεία σας για να κάνετε είσοδο."
+    android:textStyle="bold"
     app:layout_constraintHorizontal_bias="0.504"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
