--- a/app/src/main/res/layout/topic_list.xml
+++ b/app/src/main/res/layout/topic_list.xml
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:background="#2D89CC"
+        android:background="#CBCAC7"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/button_posts_new"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -73,7 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="24dp"
         android:layout_marginTop="8dp"
-        android:background="#2D89CC"
+        android:background="#CBCAC7"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -89,16 +89,8 @@
             android:layout_weight="1"
             android:ems="10"
             android:text="Α/Α"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/forum2_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:ems="10"
-            android:text="Topics"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:background="@color/place_autocomplete_search_hint" />
 
     </LinearLayout>
 
