--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/secondicon"
+    android:background="@drawable/tran_chip"
     tools:context="gr.metaptixiako.forumergasia.LoginActivity">
 
-<TextView
-    android:id="@+id/register"
-    android:layout_width="235dp"
-    android:layout_height="33dp"
-    android:layout_marginTop="32dp"
-    android:text="Βάλτε τα στοιχεία σας για να κάνετε είσοδο."
-    android:textStyle="bold"
-    app:layout_constraintHorizontal_bias="0.504"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/register"
+        android:layout_width="235dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Βάλτε τα στοιχεία σας για να κάνετε είσοδο."
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 <EditText
     android:id="@+id/username"
@@ -29,7 +30,7 @@
     android:hint="Όνομα Χρήστη"
     android:inputType="textPersonName"
     android:textColorHighlight="#ff7eff15"
-    android:textColorHint="#ffff25e6"
+    android:textColorHint="#4485F5"
     app:layout_constraintHorizontal_bias="0.502"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
@@ -43,7 +44,7 @@
     android:ems="10"
     android:inputType="textPassword"
     android:hint="Συνθηματικό"
-    android:textColorHint="#ffff299f"
+    android:textColorHint="#4485F5"
     app:layout_constraintHorizontal_bias="0.503"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
@@ -70,14 +71,14 @@
         android:layout_marginEnd="100dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="ΕΔΩ."
+        android:text="ΕΔΩ"
         android:textColor="@android:color/holo_red_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/button_login"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintVertical_bias="0.864" />
 
     <TextView
         android:id="@+id/textView2"
@@ -95,6 +96,6 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_login"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintVertical_bias="0.864" />
 
 </android.support.constraint.ConstraintLayout>
