--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,28 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/firsticon"
+    android:background="@drawable/chip"
     tools:context="gr.metaptixiako.forumergasia.MainActivity">
 
     <TextView
         android:id="@+id/wellcomeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="16dp"
         android:background="@android:drawable/editbox_dropdown_light_frame"
-        android:text="Καλως ήρθατε ."
+        android:backgroundTint="@android:color/background_dark"
+        android:text="Καλώς ήρθατε."
         android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="20sp"
         android:visibility="visible"
+        android:textColor="#FFFFFF"
+        android:textColorHighlight="#FFFFFF"
+        android:textStyle="bold"
+        app:layout_constraintHorizontal_bias="0.113"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonArxikiSelida"
-        android:layout_width="136dp"
-        android:layout_height="0dp"
-        android:layout_marginRight="36dp"
-        android:layout_marginTop="312dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="32dp"
+        android:layout_marginTop="420dp"
         android:text="ΣΥΝΔΕΘΕΙΤΕ"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wellcomeText" />
@@ -36,10 +42,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="28dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="420dp"
         android:text="ΕΓΓΡΑΦΕΙΤΕ"
         app:layout_constraintEnd_toStartOf="@+id/buttonArxikiSelida"
-        app:layout_constraintHorizontal_bias="0.608"
+        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/wellcomeText" />
 </android.support.constraint.ConstraintLayout>
