--- a/app/src/main/res/layout/forum_list.xml
+++ b/app/src/main/res/layout/forum_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#80FFFFFF"
+    android:background="@drawable/secondicon"
     android:backgroundTintMode="src_over">
 
     <TextView
