--- a/app/src/main/res/layout/topic_list.xml
+++ b/app/src/main/res/layout/topic_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/secondicon"
     tools:context="gr.metaptixiako.forumergasia.TopicActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -60,8 +61,8 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Google maps"
-            app:layout_constraintTop_toBottomOf="@+id/button_posts_new"/>
+            android:text="ONLINE ΧΡΗΣΤΕΣ"
+            app:layout_constraintTop_toBottomOf="@+id/button_posts_new" />
 
 
     </LinearLayout>
